Fix inconsistent x/y gap

--- a/src/app/typePicker/TypePicker.module.css
+++ b/src/app/typePicker/TypePicker.module.css
@@ -5,7 +5,7 @@
 .categories {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	gap: 4px;
+	gap: 4px 8px;
 }
 
 .card {
